--- a/settings.json
+++ b/settings.json
@@ -7,9 +7,9 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
+	"ownerNumber": "62885692949920",
+	"ownerNumberr": "62885692949920",
+	"cr": "@Farz",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
